# betterarchetype

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  count.sh
.github/workflows/: release.yml
src/: main.cpp
src/audio/graph/: AssetPaths.h  GraphTypes.h  ModuleRegistry.cpp  ModuleRegistry.h
src/audio/modules/: AmpProcessor.cpp  AmpProcessor.h  DriveProcessor.cpp  DriveProcessor.h  IRCabProcessor.cpp  IRCabProcessor.h  IRLoader.h  ModuleProcessor.cpp  ModuleProcessor.h  NAMModelLoader.h  NAMProcessor.cpp  NAMProcessor.h  RouterProcessor.cpp  RouterProcessor.h  SimpleConvolver.h
src/core/: GraphAudioProcessor.cpp  GraphAudioProcessor.h
src/gui/: ControlPanelComponent.cpp  ControlPanelComponent.h  GraphEditor.cpp  GraphEditor.h  ModuleBrowserComponent.cpp  ModuleBrowserComponent.h  NodeCanvasComponent.cpp  NodeCanvasComponent.h
